<resources>
    <string name="app_name">TagMo</string>
    <string name="middleCenterError" translatable="false"> </string>
    <string name="topCenterTextMessage">Place the Tag under the Phone</string>
    <string name="nfcIconDescription">NFC Icon</string>
    <string name="movingBarDescription">Moving bar indicating the scanning process</string>
    <string name="shadow_cave_progress">Shadow Cave progress</string>
    <string name="hearts">Hearts</string>
    <string name="edit_tp_data">Edit TP Data</string>
    <string name="editor_error_outofbounds">Amiibo contains an invalid current state.</string>
    <string name="fixed_key_found">Locked key OK.</string>
    <string name="fixed_key_missing">No Locked key!</string>
    <string name="unfixed_key_found">Unfixed key OK.</string>
    <string name="unfixed_key_missing">No Unfixed key!</string>
    <string name="nfc_unsupported">NFC not supported!</string>
    <string name="nfc_disabled">NFC not enabled!</string>
    <string name="nfc_enabled">NFC enabled!</string>
    <string name="settings_import_keys" translatable="false">import_keys</string>
    <string name="settings_import_info" translatable="false">import_info</string>
    <string name="settings_reset_info" translatable="false">reset_info</string>
    <string name="settings_enable_amiibo_browser" translatable="false">enable_amiibo_browser</string>
    <string name="settings_enable_tag_type_validation" translatable="false">enable_tag_type_validation</string>
    <string name="settings_enable_power_tag_support" translatable="false">enable_power_tag_support</string>
    <string name="settings_export_info" translatable="false">settings_export_info</string>
    <string name="settings_info_amiibos" translatable="false">settings_info_amiibos</string>
    <string name="settings_info_game_series" translatable="false">settings_info_game_series</string>
    <string name="settings_info_characters" translatable="false">settings_info_characters</string>
    <string name="settings_info_amiibo_series" translatable="false">settings_info_amiibo_series</string>
    <string name="settings_info_amiibo_types" translatable="false">settings_info_amiibo_types</string>
    <string name="settings_import_info_amiiboapi" translatable="false">settings_sync_info_amiiboapi</string>
    <string name="keys_missing_warning">Amiibo keys not found</string>
    <string name="nfc_enable_action">Enable</string>
    <string name="open_settings_action">Settings</string>
    <string name="edit_ssb_data">Edit SSB Data</string>
    <string name="edit_mii_data">Edit Mii Data</string>
    <string name="image_network_settings" translatable="false">\@string/image_network_settings</string>
    <string name="load_tag">Load Tag</string>
    <string name="scan_tag">Scan Tag</string>
    <string name="save_tag">Save Tag</string>
    <string name="write_tag">Write Tag</string>
    <string name="view_hex">View Hex</string>
    <string name="restore_tag">Restore Tag</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="create_tag">Create Tag*</string>
    <string name="write_tag_raw">Write Tag (Raw)</string>
    <string name="auto_save_scanned_tags">Auto save scanned tags</string>
    <string name="allow_restore_to_different_tag">Allow restore to different tag</string>
    <string name="fix_signatures">Fix Signatures</string>
    <string name="failed_to_load_powertag_keys">Failed to load PowerTag keys</string>
    <string name="unable_to_parse_amiibo_info">Unable to parse amiibo info</string>
    <string name="no_tag_loaded"><![CDATA[<No Tag Loaded>]]></string>
    <string name="error_reading_tag"><![CDATA[<Error Reading Tag>]]></string>
    <string name="blank_tag"><![CDATA[<Blank Tag>]]></string>
    <string name="unknown">Unknown</string>
    <string name="load_encrypted_tag_file_for_writing">Load encrypted tag file for writing</string>
    <string name="log_no_tag_loaded">No tag loaded</string>
    <string name="log_keys_not_loaded">Keys not loaded</string>
    <string name="barcode_scanner_not_found_would_you_like_to_install_it">Barcode Scanner is required to use QR Codes. Would you like to install it from the Play Store?</string>
    <string name="barcode_non_yes">Yes</string>
    <string name="barcode_non_no">No</string>
    <string name="qr_base64_decode_fail">QR Code base64 decode failure</string>
    <string name="qr_legacy_decode_fail">QR Code legacy decode failure</string>
    <string name="qr_decode_fail">Failed to decode QR Code</string>
    <string name="log_tag_data_is_empty">Tag data is empty</string>
    <string name="log_fail_open_fm">Failed to show file open dialog. Please install a file manager app.</string>
    <string name="loaded_tag_file">Loaded tag file.</string>
    <string name="log_error">Error:</string>
    <string name="log_tag_is_not_valid">Warning tag is not valid</string>
    <string name="log_wrote_to_file">Wrote to file</string>
    <string name="log_in_tagmo_directory">in tagmo directory.</string>
    <string name="log_error_writeing_to_file">Error writing to file:</string>
    <string name="save_image">Save Image</string>
    <string name="save">Save</string>
    <string name="saved_file_as">Saved file as</string>
    <string name="cancel">Cancel</string>
    <string name="unable_read_amiibo_id">Unable read Amiibo ID</string>
    <string name="amiibo_isnt_compat_editior">This Amiibo is not compatible with this editor</string>
    <string name="error_decrypting_data">Error decrypting data</string>
    <string name="amiino_appdata_isnt_zelda_format">This Amiibo\'s app data is not formatted for The Legend of Zelda: Twilight Princess HD HD Cave of Shadows.</string>
    <string name="error_parsing_data">Error parsing data</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="set_tag_param">Set Tag Parameters</string>
    <string name="fixed_key">Fixed Key</string>
    <string name="amiibo_info_not_loaded">Amiibo info not loaded</string>
    <string name="fail_export_amiibo_info">Failed to export amiibo info to</string>
    <string name="exported_amiibo_info_to">Exported amiibo info to</string>
    <string name="amiibos">Amiibos</string>
    <string name="game_series">Game Series</string>
    <string name="characters">Characters</string>
    <string name="amiibo_series">Amiibo Series</string>
    <string name="amiibo_types">Amiibo Types</string>
    <string name="fail_load_amiibo_info">Failed to load amiibo info</string>
    <string name="fail_parse_amiibo_info">Failed to parse amiibo info</string>
    <string name="fail_read_amiibo_info">Failed to read amiibo info</string>
    <string name="fail_update_amiibo_info">Failed to update amiibo info</string>
    <string name="upadted_amiibo_info">Updated amiibo info</string>
    <string name="fail_parse_def_amiibo_info">Failed to parse default amiibo info</string>
    <string name="reset_amiibo_info">Reset amiibo info</string>
    <string name="total">Total:</string>
    <string name="syncing_amiibo_info_from_api">Syncing Amiibo Info from AmiiboAPI...</string>
    <string name="syncing_amiibo_info_from_api_successful">Syncing Amiibo Info from AmiiboAPI successful!</string>
    <string name="syncing_amiibo_info_from_api_failed">Syncing Amiibo Info from AmiiboAPI failed</string>
    <string name="crypto_seed">Crypto Seed</string>
    <string name="char_id">Char. ID</string>
    <string name="ntag_uid">NTAG UID</string>
    <string name="tag_hmac">Tag HMAC</string>
    <string name="app_data">App Data</string>
    <string name="hash">Hash</string>
    <string name="app_id">App ID</string>
    <string name="mii">Mii</string>
    <string name="nickname">Nickname</string>
    <string name="console_hash">Console #</string>
    <string name="timestamp_counter">Timestamp/Counter</string>
    <string name="data_hmac">Data HMAC</string>
    <string name="lock_cc">Lock/CC</string>
    <string name="log_error_writing_to_file">Error writing to file:</string>
    <string name="keys_not_loaded">Keys not loaded</string>
    <string name="write_to_tag_raw">Write to Tag (Raw)</string>
    <string name="write_to_tag_auto">Write to Tag (Auto)</string>
    <string name="update_data_on_tag">Update Data on Tag</string>
    <string name="tag_detected">Tag detected..</string>
    <string name="done">Done</string>
    <string name="nfc_support_not_detected">NFC support not detected.</string>
    <string name="nfc_disabled2">NFC Disabled.</string>
    <string name="nfc_error_msg">NFC adapter is currently disabled. Enable NFC?</string>
    <string name="nfc_disabled3">NFC Disabled!</string>
    <string name="amiino_appdata_isnt_ssb_format">The Amiibo\'s app data is not formatted for Super Smash Bros.</string>
    <string name="series">Series</string>
    <string name="character">Character</string>
    <string name="variation">Variation</string>
    <string name="form">Form</string>
    <string name="set">Set</string>
    <string name="no_amiibos_found">No amiibos found</string>
    <string name="parent">Parent</string>
    <string name="change_view">Change View</string>
    <string name="simple">Simple</string>
    <string name="compact">Compact</string>
    <string name="large">Large</string>
    <string name="settings">Settings</string>
    <string name="dump_logcat_for_bug_reporting">Dump Logcat (for bug reporting)</string>
    <string name="write_tag_raw_mode">Write Tag (Raw mode)</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="amiibo_type">Amiibo Type</string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="file_path">File Path</string>
    <string name="find_files_recursively">Find Files Recursively</string>
    <string name="refresh">Refresh</string>
    <string name="name_uppercase">NAME</string>
    <string name="tagid_uppercase">TAGID</string>
    <string name="amiibo_type_uppercase">AMIIBO TYPE</string>
    <string name="game_series_uppercase">GAME SERIES</string>
    <string name="amiibo_series_uppercase">AMIIBO SERIES</string>
    <string name="path_uppercase">PATH</string>
    <string name="encryption_keys">Encryption Keys</string>
    <string name="import_keys">Import Keys</string>
    <string name="fm">File Browser</string>
    <string name="fm_dec">The built in amiibo file browser lists and allows filtering of all of the amiibos in the tagmo folder on the sd card.</string>
    <string name="fm_enable">Enable Amiibo File Browser</string>
    <string name="image_loading">Image Loading</string>
    <string name="load_images">Load images</string>
    <string name="tag_validation">Tag Validation</string>
    <string name="enable_ntag215_dec">Not all NFC chipsets correctly identify NFC tags. Disabling tag verification will write to tags that may not be Amiibo compatible or may fail in unexpected ways.</string>
    <string name="enable_ntag215">Enable NTAG215 validation</string>
    <string name="powertag">PowerTag</string>
    <string name="enable_powertag_dec">Support is currently under development. See the Wiki on github for limitations and use.</string>
    <string name="enable_powertag">Enable PowerTag support</string>
    <string name="amiibo_info">Amiibo Info</string>
    <string name="syncs_amiiboapidotcom">Syncs Amiibo info with amiiboapi.com</string>
    <string name="sync_amiiboapi">Sync Amiibo info with AmiiboAPI</string>
    <string name="import_amiibo_info_json">Import Amiibo info from JSON</string>
    <string name="import_amiibo_info">Import Amiibo info</string>
    <string name="export_amiibo_info_json">Export Amiibo info to JSON</string>
    <string name="export_amiibo_info">Export Amiibo info</string>
    <string name="reset_amiibo_info2">Reset Amiibo info</string>
    <string name="amiibo_info_stats">Amiibo Info Stats</string>
</resources>