<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/encryption_keys">
        <android.support.v7.preference.Preference
            android:key="@string/settings_import_keys"
            android:title="@string/import_keys"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/fm">
        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_enable_amiibo_browser"
            android:summary="@string/fm_dec"
            android:title="@string/fm_enable"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/image_loading">
        <android.support.v7.preference.ListPreference
            android:entries="@array/imageNetworkSettings"
            android:entryValues="@array/imageNetworkSettingValues"
            android:key="@string/image_network_settings"
            android:title="@string/load_images"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/tag_validation">
        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_enable_tag_type_validation"
            android:summary="@string/enable_ntag215_dec"
            android:title="@string/enable_ntag215"/>
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory android:title="@string/powertag">
        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_enable_power_tag_support"
            android:summary="@string/enable_powertag_dec"
            android:title="@string/enable_powertag"/>
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/amiibo_info">
        <android.support.v7.preference.Preference
            android:key="@string/settings_import_info_amiiboapi"
            android:summary="@string/syncs_amiiboapidotcom"
            android:title="@string/sync_amiiboapi"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_import_info"
            android:summary="@string/import_amiibo_info_json"
            android:title="@string/import_amiibo_info"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_export_info"
            android:summary="@string/export_amiibo_info_json"
            android:title="@string/export_amiibo_info"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_reset_info"
            android:title="@string/reset_amiibo_info2"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/amiibo_info_stats">
        <android.support.v7.preference.Preference
            android:key="@string/settings_info_amiibos"
            android:title="@string/amiibos"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_info_game_series"
            android:title="@string/game_series"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_info_characters"
            android:title="@string/characters"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_info_amiibo_series"
            android:title="@string/amiibo_series"/>
        <android.support.v7.preference.Preference
            android:key="@string/settings_info_amiibo_types"
            android:title="@string/amiibo_types"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>