<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/filter_game_series"
                android:title="@string/game_series">
                <menu>
                    <group
                        android:id="@+id/filter_game_series_group"
                        android:checkableBehavior="single"/>
                </menu>
            </item>
            <item
                android:id="@+id/filter_character"
                android:title="@string/character">
                <menu>
                    <group
                        android:id="@+id/filter_character_group"
                        android:checkableBehavior="single"/>
                </menu>
            </item>
            <item
                android:id="@+id/filter_amiibo_series"
                android:title="@string/amiibo_series">
                <menu>
                    <group
                        android:id="@+id/filter_amiibo_series_group"
                        android:checkableBehavior="single"/>
                </menu>
            </item>
            <item
                android:id="@+id/filter_amiibo_type"
                android:title="@string/amiibo_type">
                <menu>
                    <group
                        android:id="@+id/filter_amiibo_type_group"
                        android:checkableBehavior="single"/>
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_id"
                    android:title="ID"
                    tools:ignore="HardcodedText" />
                <item
                    android:id="@+id/sort_name"
                    android:title="@string/name"/>
                <item
                    android:id="@+id/sort_game_series"
                    android:title="@string/game_series"/>
                <item
                    android:id="@+id/sort_character"
                    android:title="@string/character"/>
                <item
                    android:id="@+id/sort_amiibo_series"
                    android:title="@string/amiibo_series"/>
                <item
                    android:id="@+id/sort_amiibo_type"
                    android:title="@string/amiibo_type"/>
                <item
                    android:id="@+id/sort_file_path"
                    android:title="@string/file_path"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/view"
        android:icon="@drawable/ic_view_array_white_24dp"
        android:title="@string/change_view"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/view_simple"
                    android:title="@string/simple"/>
                <item
                    android:id="@+id/view_compact"
                    android:title="@string/compact"/>
                <item
                    android:id="@+id/view_large"
                    android:title="@string/large"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/recursive_files"
        android:title="@string/find_files_recursively"
        app:showAsAction="ifRoom"
        android:checkable="true"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>
</menu>